--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="logo-container">
             <img src="images/logo.png" alt="MVC Digital"/>
             <h1>MVC Digital</h1>
-            <h2>Specialising in .NET, SQL Server and Javascript development.</h2>
+            <h2>Specialising in .NET, SQL Server and JavaScript development.</h2>
             <h2>Website coming soon.</h2>
             <a href="mailto:contact@mvcdigital.co.uk">contact@mvcdigital.co.uk</a>
         </div>
