--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>MVC Digital - C# .NET Javascript Development</title>
+    <title>MVC Digital - C# .NET JavaScript Development</title>
     <link href="css/style.min.css" rel="stylesheet" />
 </head>
 <body>    
