--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>MVC Digital - C# .NET JavaScript Development</title>
+    <title>MVC Technology - C# .NET JavaScript Development</title>
     <link href="css/style.min.css" rel="stylesheet" />
 </head>
 <body>    
 
     <div class="container">
         <div class="logo-container">
-            <img src="images/logo.png" alt="MVC Digital"/>
-            <h1>MVC Digital</h1>
+            <img src="images/logo.png" alt="MVC Technology"/>
+            <h1>MVC Technology</h1>
             <h2>Specialising in .NET, SQL Server and JavaScript development.</h2>
             <h2>Website coming soon.</h2>
             <a href="mailto:contact@mvcdigital.co.uk">contact@mvcdigital.co.uk</a>
